fetch json data and display actor list

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <h1>Actor List</h1>
       <div class="actorlist">
         <ul>
-          <li>Actor Name</li>
+          <template>
+            <li class="name">Actor Name</li>
+          </template>
         </ul>
       </div>
     </main>
