--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       <div class="actorlist">
         <ul>
           <template>
-            <li class="name">Actor Name</li>
+            <div class="actor-box">
+              <li class="name">Actor Name</li>
+              <div class="popup-box hide">
+                <p class="film-name">Film Name</p>
+              </div>
+            </div>
           </template>
         </ul>
       </div>
